fix: liked post

--- a/src/pages/Recent/Recent.scss
+++ b/src/pages/Recent/Recent.scss
@@ -25,6 +25,7 @@
   background: $primary-color;
   padding: 1rem;
   border-radius: $border-radius-10;
+  margin-top: 1rem;
   &__title {
     font-weight: 400;
     font-size: 14px;
